--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "archiver": "^0.21.0",
     "async": "^1.5.0",
     "body-parser": "^1.15.0",
+    "csurf": "^1.8.3",
     "express": "^4.13.4",
     "express-rate-limit": "^2.1.0",
     "express-secure-only": "^0.2.1",
